update maven groupId

--- a/SmilePlot/pom.xml
+++ b/SmilePlot/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>io.smile</groupId>
+        <groupId>com.github.haifengl</groupId>
         <artifactId>smile-all</artifactId>
         <version>1.0.0</version>
     </parent>
@@ -49,12 +49,12 @@
 
     <dependencies>
         <dependency>
-            <groupId>io.smile</groupId>
+            <groupId>com.github.haifengl</groupId>
             <artifactId>smile-math</artifactId>
             <version>1.0.0</version>
         </dependency>
         <dependency>
-            <groupId>io.smile</groupId>
+            <groupId>com.github.haifengl</groupId>
             <artifactId>smile-core</artifactId>
             <version>1.0.0</version>
         </dependency>
