--- a/SmileInterpolation/pom.xml
+++ b/SmileInterpolation/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>io.smile</groupId>
+        <groupId>com.github.haifengl</groupId>
         <artifactId>smile-all</artifactId>
         <version>1.0.0</version>
     </parent>
@@ -49,7 +49,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>io.smile</groupId>
+            <groupId>com.github.haifengl</groupId>
             <artifactId>smile-math</artifactId>
             <version>1.0.0</version>
         </dependency>
