Fix the bug in learnGaussianRadialBasis
also set Math constants dynamically

--- a/Smile/.classpath
+++ b/Smile/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/SmileGraph"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/SmileMath"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/SmileData"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/SmileTestData"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
