--- a/Smile/pom.xml
+++ b/Smile/pom.xml
@@ -65,6 +65,11 @@
             <version>4.11</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>18.0</version>
+        </dependency>
     </dependencies>
 
     <distributionManagement>
