--- a/pom.xml
+++ b/pom.xml
@@ -6,11 +6,11 @@
 
     <groupId>com.github.haifengl</groupId>
     <artifactId>smile</artifactId>
-    <version>1.0.4</version>
+    <version>1.1.0</version>
     <packaging>pom</packaging>
 
-    <name>Smile Aggregate POM</name>
-    <description>Statistical Machine Intelligence and Learning Engine -- Aggregate</description>
+    <name>Smile Root Project</name>
+    <description>Statistical Machine Intelligence and Learning Engine</description>
     <url>http://github.com/haifengl/smile</url>
 
     <licenses>
@@ -51,6 +51,7 @@
         <module>core</module>
         <module>nlp</module>
         <module>plot</module>
+        <module>scala</module>
     </modules>
     
     <properties>
