--- a/scala/pom.xml
+++ b/scala/pom.xml
@@ -5,12 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.haifengl</groupId>
-    <artifactId>smile-demo</artifactId>
+    <artifactId>smile-scala</artifactId>
     <version>1.1.0</version>
     <packaging>jar</packaging>
 
-    <name>Smile Demo</name>
-    <description>Statistical Machine Intelligence and Learning Engine -- Demo</description>
+    <name>Smile Scala API</name>
+    <description>Statistical Machine Intelligence and Learning Engine -- Scala API</description>
     <url>http://github.com/haifengl/smile</url>
 
     <licenses>
@@ -55,8 +55,29 @@
         </dependency>
         <dependency>
             <groupId>com.github.haifengl</groupId>
+            <artifactId>smile-nlp</artifactId>
+            <version>1.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.haifengl</groupId>
+            <artifactId>smile-interpolation</artifactId>
+            <version>1.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.haifengl</groupId>
             <artifactId>smile-plot</artifactId>
             <version>1.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.thoughtworks.xstream</groupId>
+            <artifactId>xstream</artifactId>
+            <version>1.4.8</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
@@ -96,24 +117,13 @@
 
     <build>
         <plugins>
-            <plugin>
+             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.3</version>
                 <configuration>
                     <source>1.7</source>
                     <target>1.7</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <configuration>
-                    <archive>
-                        <manifest>
-                            <mainClass>smile.demo.SmileDemo</mainClass>
-                        </manifest>
-                    </archive>
                 </configuration>
             </plugin>
             <plugin>
@@ -148,7 +158,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-gpg-plugin</artifactId>
-                <version>1.6</version>
+                <version>1.6</version>  
                 <executions>
                     <execution>
                         <id>sign-artifacts</id>
