fix build.sbt and .ini

--- a/src/universal/conf/application.ini
+++ b/src/universal/conf/application.ini
@@ -2,10 +2,10 @@
 # -J-X
 -J-Xmx4096M
 -J-Xms1024M
--J-XX:+UseG1GC
--J-XX:+UseStringDeduplicationJVM
 
 # Add additional jvm parameters
+-XX:+UseG1GC
+-XX:+UseStringDeduplicationJVM
 
 # Additional configuration file to replace the default one
 -Dconfig.file=${app_home}/../conf/application.conf
