--- a/.gitignore
+++ b/.gitignore
@@ -14,5 +14,6 @@ src/universal/doc/api/
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
+*.iml
 **/target
 
