more comments on setIdenticalExlcuded behavior for nearest neighbor search

--- a/shell/src/universal/conf/log4j.properties
+++ b/shell/src/universal/conf/log4j.properties
@@ -55,7 +55,5 @@ log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern=%d{ISO8601} %-5p [%X{PID}:%t] %c{2}: %m%n
 
 # Custom Logging levels
-log4j.logger.kafka=INFO
-log4j.logger.org.apache.zookeeper=INFO
-log4j.logger.com.jayway.jsonpath=INFO
-
+#log4j.logger.kafka=INFO
+#log4j.logger.org.apache.zookeeper=INFO
