mv jvm parameters to smile.ini

--- a/shell/src/universal/conf/smile.ini
+++ b/shell/src/universal/conf/smile.ini
@@ -4,7 +4,16 @@
 -J-Xms1024M
 
 # Add additional jvm parameters
+-J-server
 
+# Performance optimization
+-J-XX:+AggressiveOpts
+
+# G1 garbage collector
+-J-XX:+UseG1GC
+
+# Optimize string duplication, which happens a lot when parsing a data file
+-J-XX:+UseStringDeduplication
 
 # Turn on JVM debugging, open at the given port
 # -jvm-debug <port>
