print GC details

--- a/shell/src/universal/conf/smile.ini
+++ b/shell/src/universal/conf/smile.ini
@@ -17,6 +17,7 @@
 
 # Turn on JVM debugging, open at the given port
 # -jvm-debug <port>
+-J-XX:-PrintGCDetails
 
 # Don't run the java version check
 # -no-version-check
