shell jvm heap size configuration with -XX:maxRAMPercentage

--- a/shell/src/universal/conf/smile.ini
+++ b/shell/src/universal/conf/smile.ini
@@ -1,7 +1,8 @@
 # Setting -X directly (-J is stripped)
-# -J-X
--J-Xmx4096M
--J-Xms1024M
+# Use up to 75% RAM for maximum size of heap
+-XX:MaxRAMPercentage=75.0
+#-J-Xmx12G
+#-J-Xms4G
 
 # Add additional jvm parameters
 -J-server
