install kernels with environment.yml

--- a/shell/src/universal/bin/environment.yml
+++ b/shell/src/universal/bin/environment.yml
@@ -4,7 +4,7 @@ channels:
   - simplect
   - jetbrains
 dependencies:
-  - nbdime
+  - nbdime-jupyterlab
   - jupyterlab-git
   - kotlin-jupyter-kernel
   - clojupyter
