--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -4,7 +4,7 @@ channels:
   - simplect
   - jetbrains
 dependencies:
-  - nbdime-jupyterlab
+  - nbdime
   - jupyterlab-git
   - kotlin-jupyter-kernel
   - clojupyter
