--- a/shell/src/universal/conf/smile.ini
+++ b/shell/src/universal/conf/smile.ini
@@ -1,15 +1,15 @@
 ### Setting -X directly (-J is stripped)
 
 # Use up to 75% RAM for maximum size of heap
--J-XX:MaxRAMPercentage=75.0
+-XX:MaxRAMPercentage=75.0
 
 # Or explicit heap size – Xms and Xmx Options
-#-J-Xmx24G -J-Xms4G
+#-Xmx24G -Xms4G
 
 ### Add additional jvm parameters
 
 # This parameter is on by default in 64 bit JVM
-#-J-server
+#-server
 
 # Headless mode is a system configuration in which the display device,
 # keyboard, or mouse is lacking. 
@@ -18,30 +18,30 @@
 ### Performance optimization
 
 # Enable the large page size to optimize processor TLB.
-#-J-XX:+UseLargePages -J-XX:LargePageSizeInBytes=2M
+#-XX:+UseLargePages -XX:LargePageSizeInBytes=2M
 
 # G1 garbage collector
--J-XX:+UseG1GC
+-XX:+UseG1GC
 
 # If you have very large RAM and use Java11+, try ZGC instead.
-#-J-XX:+UnlockExperimentalVMOptions -J-XX:+UseZGC
+#-XX:+UnlockExperimentalVMOptions -XX:+UseZGC
 
 # UseCompressedOop is on by default for up to 32GB heap.
 # The below tuning enables it up to 64GB with object alignment at 16.
-#-J-XX:+UseCompressedOops -J-XX:ObjectAlignmentInBytes=16
+#-XX:+UseCompressedOops -XX:ObjectAlignmentInBytes=16
 
 # Enable NUMA-aware allocators.
 # JVM automatically turns off the flag when run on a single node
--J-XX:+UseNUMA
+-XX:+UseNUMA
 
 # Optimize string duplication, which happens a lot when parsing a data file.
--J-XX:+UseStringDeduplication
+-XX:+UseStringDeduplication
 # Optimize String concatenation operations where possible.
--J-XX:+OptimizeStringConcat
+#-XX:+OptimizeStringConcat
 
 # Turn on JVM debugging, open at the given port
 # -jvm-debug <port>
--J-XX:-PrintGCDetails
+-XX:-PrintGCDetails
 
 # Don't run the java version check
 # -no-version-check
