--- a/shell/src/universal/conf/smile.ini
+++ b/shell/src/universal/conf/smile.ini
@@ -1,7 +1,7 @@
 ### Setting -X directly (-J is stripped)
 
 # Use up to 75% RAM for maximum size of heap
-#-J-XX:MaxRAMPercentage=75
+#-J-XX:MaxRAMPercentage=75 -J-XX:InitialRAMPercentage=25
 
 # Or explicit heap size with Xms and Xmx Options
 #-J-Xmx24G -J-Xms4G
