--- a/shell/src/universal/conf/smile.conf
+++ b/shell/src/universal/conf/smile.conf
@@ -1,3 +1,9 @@
+smile {
+  http.server {
+    # Default port to bind HTTP server to when no port was explicitly given.
+    default-http-port = 8080
+  }
+}
 akka.http {
   server {
     # The time after which an idle connection will be automatically closed.
@@ -19,9 +25,6 @@ akka.http {
     # customization of the timeout period and timeout response for each
     # request individually.
     request-timeout = 20 s
-
-    # Default port to bind HTTP server to when no port was explicitly given.
-    default-http-port = 8080
 
     # The time period the HTTP server implementation will keep a connection open after
     # all data has been delivered to the network layer. This setting is similar to the SO_LINGER socket option
