install jupyter extention through pip/conda

--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -4,5 +4,8 @@ channels:
   - simplect
   - jetbrains
 dependencies:
+  - plotly
+  - jupyter-dash
+  - ipywidgets
   - kotlin-jupyter-kernel
   - clojupyter
