comment out kotlin and clojure

--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -6,5 +6,5 @@ channels:
 dependencies:
   - plotly
   - ipywidgets
-  - kotlin-jupyter-kernel
-  - clojupyter
+    #  - kotlin-jupyter-kernel
+    #  - clojupyter
