--- a/shell/src/universal/conf/smile.conf
+++ b/shell/src/universal/conf/smile.conf
@@ -1,7 +1,9 @@
 smile {
   http.server {
-    # Default port to bind HTTP server to when no port was explicitly given.
-    default-http-port = 8080
+    # Default interface to bind HTTP server.
+    interface = localhost
+    # Default port to bind HTTP server.
+    port = 8080
   }
 }
 akka.http {
