awt.headless=true for serve

--- a/serve/src/universal/conf/smile-serve.ini
+++ b/serve/src/universal/conf/smile-serve.ini
@@ -11,7 +11,7 @@
 
 # Headless mode is a system configuration in which the display device,
 # keyboard, or mouse is lacking. 
-#-Djava.awt.headless=true
+-Djava.awt.headless=true
 
 ### Performance optimization
 
@@ -20,9 +20,6 @@
 
 # ZGC garbage collector
 -J-XX:+UseZGC
-
-# If you have very large RAM and use Java11+, try ZGC instead.
-#-J-XX:+UnlockExperimentalVMOptions -J-XX:+UseZGC
 
 # UseCompressedOop is on by default for up to 32GB heap.
 # The below tuning enables it up to 64GB with object alignment at 16.
