--- a/shell/src/universal/conf/smile.ini
+++ b/shell/src/universal/conf/smile.ini
@@ -21,8 +21,8 @@
 # G1 garbage collector
 -J-XX:+UseG1GC
 
-# If you have very large RAM and use Java11+, try ZGC instead.
-#-J-XX:+UnlockExperimentalVMOptions -J-XX:+UseZGC
+# If you have very large RAM and use Java15+, try ZGC instead.
+#-J-XX:+UseZGC
 
 # UseCompressedOop is on by default for up to 32GB heap.
 # The below tuning enables it up to 64GB with object alignment at 16.
