refactor smile.serve.chat

--- a/serve/src/main/resources/application.conf
+++ b/serve/src/main/resources/application.conf
@@ -1,5 +1,56 @@
 smile.serve {
   timeout = 300 s
+
+  db {
+    config = "smile.serve.db.h2"
+
+    h2 {
+      profile = "slick.jdbc.H2Profile$"
+      db {
+        url = "jdbc:h2:../db/smile_serve;AUTO_SERVER=TRUE"
+        driver = org.h2.Driver
+        connectionPool = disabled
+        keepAliveConnection = true
+      }
+    }
+
+    sqlite = {
+      profile = "slick.jdbc.SQLiteProfile$"
+      db {
+        url = "jdbc:sqlite:../db/smile_serve.db"
+        driver = org.sqlite.JDBC
+        connectionPool = disabled
+        keepAliveConnection = true
+      }
+    }
+
+    mysql {
+      profile = "slick.jdbc.MySQLProfile$"
+      db {
+        driver = "com.mysql.cj.jdbc.Driver",
+        url = "jdbc:mysql://127.0.0.1:3306/smile_serve?serverTimezone=UTC",
+        user = "user",
+        password = "pass",
+        connectionPool = disabled
+      }
+    }
+
+    postgres {
+      profile = "slick.jdbc.PostgresProfile$"
+      db {
+        connectionPool = "HikariCP"
+        dataSourceClass = "org.postgresql.ds.PGSimpleDataSource"
+        properties {
+          serverName = "localhost"
+          portNumber = "5432"
+          databaseName = "smile_serve"
+          user = "postgres"
+          password = "postgres"
+        }
+        numThreads = 10
+      }
+    }
+  }
 }
 
 akka.http {
