--- a/chat/package.json
+++ b/chat/package.json
@@ -12,6 +12,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
+    "remark-gemoji": "^8.0.0",
     "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
