initial import of thread and message routes

--- a/serve/src/main/resources/application.conf
+++ b/serve/src/main/resources/application.conf
@@ -2,7 +2,7 @@ smile.serve {
   timeout = 300 s
 
   db {
-    config = "smile.serve.db.h2"
+    config = "smile.serve.db.sqlite"
 
     h2 {
       profile = "slick.jdbc.H2Profile$"
