initialize db in currect directory

--- a/serve/src/main/resources/application.conf
+++ b/serve/src/main/resources/application.conf
@@ -7,7 +7,7 @@ smile.serve {
     h2 {
       profile = "slick.jdbc.H2Profile$"
       db {
-        url = "jdbc:h2:./db/smile_serve;AUTO_SERVER=TRUE"
+        url = "jdbc:h2:./smile_serve;AUTO_SERVER=TRUE"
         driver = org.h2.Driver
         connectionPool = disabled
         keepAliveConnection = true
@@ -17,7 +17,7 @@ smile.serve {
     sqlite = {
       profile = "slick.jdbc.SQLiteProfile$"
       db {
-        url = "jdbc:sqlite:./db/smile_serve.db"
+        url = "jdbc:sqlite:./smile_serve.db"
         driver = org.sqlite.JDBC
         connectionPool = disabled
         keepAliveConnection = true
