--- a/chat/package.json
+++ b/chat/package.json
@@ -13,6 +13,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
+    "react-syntax-highlighter": "^15.5.0",
     "remark-gemoji": "^8.0.0",
     "remark-gfm": "^4.0.0"
   },
@@ -20,6 +21,6 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
-    "vite": "^5.3.1"
+    "vite": "^5.3.2"
   }
 }
