--- a/chat/package.json
+++ b/chat/package.json
@@ -21,7 +21,6 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
-    "vite": "^5.3.2",
-    "vite-plugin-svgr": "^4.2.0"
+    "vite": "^5.3.2"
   }
 }
